more correct LookAheadLexer state calculation